[tool.poetry]
name = "udacity_dog_breed"
version = "0.1.0"
description = "A project consisting on building dog breed classification notebook and app"
authors = ["sanggusti <gustiowinata0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"
opencv-python = "^4.5.3"
opencv-contrib-python = "^4.5.3"
matplotlib = "^3.4.2"
tqdm = "^4.62.0"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
